# SOEM

./: .gitignore  CMakeLists.txt
benchmarks/: soem_benchmark.py
build_optimized/: CPackConfig.cmake  CPackSourceConfig.cmake
build_optimized/samples/ec_sample/: ec_sample
build_optimized/samples/eepromtool/: eepromtool
build_optimized/samples/eni_test/: eni_test  sample-eni.c
build_optimized/samples/eoe_test/: eoe_test
build_optimized/samples/firm_update/: firm_update
build_optimized/samples/simple_ng/: simple_ng
build_optimized/samples/slaveinfo/: slaveinfo
docs/: Guia_Implementacion.md  SOEM_Analisis_Completo.md  SOEM_Analisis_Rendimiento.md  SOEM_Investigacion_Avanzada.md  SOEM_Soporte_SIMD.md
include/soem/: ec_options.h
optimized/: CMakeLists.txt  test_simd  test_simd.c
optimized/include/: ec_memopt.h
optimized/src/: ec_nicdrv_opt.c
oshw/linux/: nicdrv.h
scripts/: profile_soem.sh
